# WebNewtypeDownloader

./: CMakeLists.txt  README.md  WebNewTypeDownloader.cpp
